--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <body>
 
 </body>
-<script src="js/pallete.js"></script>
+<div id="graph" style="height: 500px;width: 600px"> </div>
 <script src="js/chart.js"></script>
 <script src="js/app.js"></script>
 </html>
