--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <body>
 
 </body>
+<div style="background:black;color:white;width:65px;position:absolute;top:100px;left:100px;opacity:0"> HELLLO </div>
 <div id="graph" style="height: 500px;width: 600px"> </div>
 <script src="js/chart.js"></script>
 <script src="js/app.js"></script>
