--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
 
 </body>
-<div id="graph" style="height: 500px;width: 600px"> </div>
+<div id="graph" style=""> </div>
 <script src="js/chart.js"></script>
 <script src="js/app.js"></script>
 </html>
