--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 <body>
 
 </body>
+<input type="button" value="Shuffle" onclick="chart.sort(Sort.shuffle)"/>
+<input type="button" value="Reverse" onclick="chart.reverse()"/>
+<input type="button" value="Sort by min" onclick="chart.sort(Sort.min)"/>
+<input type="button" value="Sort by average" onclick="chart.sort(Sort.average)"/>
+<input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/>
 <div id="graph" style=""> </div>
 <script src="js/chart.js"></script>
 <script src="js/app.js"></script>
