added new controller and model for crosstab

--- a/development/index.html
+++ b/development/index.html
@@ -23,8 +23,10 @@
 	<script src="js/chart.js"></script>
 	<script src="js/column_chart.js"></script>
 	<script src="js/controller.js"></script>
+	<script src="js/controller_cross.js"></script>
 	<script src="js/global.js"></script>
 	<script src="js/line_chart.js"></script>
+	<script src="js/model_cross.js"></script>
 	<script src="js/model.js"></script>
 	<script src="js/tooltip.js"></script>
 	<script src="js/view.js"></script>
