pre data render work complete

--- a/development/index.html
+++ b/development/index.html
@@ -32,6 +32,8 @@
 	<script src="js/view.js"></script>
 	<script src="js/xaxis.js"></script>
 	<script src="js/yaxis.js"></script>
+	<script src="js/xaxis_cross.js"></script>
+	<script src="js/yaxis_cross.js"></script>
     <!-- endbuild -->
 
 	<script src="app.js"></script>
