graph rendered - not properly arrange

--- a/development/index.html
+++ b/development/index.html
@@ -16,12 +16,14 @@
 <input type="button" value="Sort by average" onclick="chart.sort(Sort.average)"/>
 <input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/>
 <div id="graph" style=""> </div>
+<div id="graphcross" style=""> </div>
 
     <!-- build:js -->
 	<script src="js/api.js"></script>
 	<script src="js/axis.js"></script>
 	<script src="js/chart.js"></script>
 	<script src="js/column_chart.js"></script>
+	<script src="js/column_cross_chart.js"></script>
 	<script src="js/controller.js"></script>
 	<script src="js/controller_cross.js"></script>
 	<script src="js/global.js"></script>
