labels added xaxis

--- a/development/index.html
+++ b/development/index.html
@@ -9,14 +9,13 @@
 
 </head>
 <body>
-
+<!--
 <input type="button" value="Shuffle" onclick="chart.sort(Sort.shuffle)"/>
 <input type="button" value="Reverse" onclick="chart.reverse()"/>
 <input type="button" value="Sort by min" onclick="chart.sort(Sort.min)"/>
 <input type="button" value="Sort by average" onclick="chart.sort(Sort.average)"/>
-<input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/>
+<input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/> -->
 <div id="graph" style=""> </div>
-<div id="graphcross" style=""> </div>
 
     <!-- build:js -->
 	<script src="js/api.js"></script>
