--- a/development/index.html
+++ b/development/index.html
@@ -9,12 +9,13 @@
 
 </head>
 <body>
-<!--
-<input type="button" value="Shuffle" onclick="chart.sort(Sort.shuffle)"/>
-<input type="button" value="Reverse" onclick="chart.reverse()"/>
-<input type="button" value="Sort by min" onclick="chart.sort(Sort.min)"/>
-<input type="button" value="Sort by average" onclick="chart.sort(Sort.average)"/>
-<input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/> -->
+<div id="btn" style="position:absolute;top:-100px">
+	<input type="button" value="Shuffle" onclick="chart.sort(Sort.shuffle)"/>
+	<input type="button" value="Reverse" onclick="chart.reverse()"/>
+	<input type="button" value="Sort by min" onclick="chart.sort(Sort.min)"/>
+	<input type="button" value="Sort by average" onclick="chart.sort(Sort.average)"/>
+	<input type="button" value="Sort by max" onclick="chart.sort(Sort.max)"/>
+</div>
 <div id="graph" style=""> </div>
 
     <!-- build:js -->
@@ -38,5 +39,14 @@
     <!-- endbuild -->
 
 	<script src="app.js"></script>
+	<script type="text/javascript">
+	// User logic - hide buttons if crosstab is on
+		setTimeout(function hideButtons(){
+			console.log(jsonData.crossTab)
+			if(!jsonData.crosstab){
+				document.getElementById("btn").style.position = "relative";
+			}
+		}, 0);
+	</script>
 </body>
 </html>
